--- a/meshviewer/config.json
+++ b/meshviewer/config.json
@@ -1,8 +1,6 @@
 {
-  "dataPaths": [
-    "./"
-  ],
-  "siteName": "Freifunk Hamburg",
+  "dataPath": "http://mesh.ffnord.net/data/",
+  "siteName": "Freifunk Nord",
   "mapSigmaScale": 0.54,
   "showContact": false,
   "maxAge": 30,
@@ -62,19 +60,19 @@
   ],
   "nodeInfos": [
     { "name": "Clientstatistik",
-      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-knoteninfo-knoten-id?var-region=ffhh&var-knoten={NODE_ID}",
-      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-knoteninfo-knoten-id?panelId=1&fullscreen&var-region=ffhh&var-knoten={NODE_ID}&theme=light&width=530&height=332&from=now-3d",
+      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-knoteninfo-knoten-id?var-region=ffnord&var-knoten={NODE_ID}",
+      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-knoteninfo-knoten-id?panelId=1&fullscreen&var-region=ffnord&var-knoten={NODE_ID}&theme=light&width=530&height=332&from=now-3d",
       "caption": "Verbundene Clients in den letzten 3 Tage an Knoten {NODE_ID}"
     }
   ],
   "globalInfos": [
     { "name": "Clientstatistik (gesamt)",
-      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-ubersicht?var-region=ffhh",
-      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=5&fullscreen&var-region=ffhh&theme=light&width=530&height=332&from=now-3d",
+      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-ubersicht?var-region=ffnord",
+      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=5&fullscreen&var-region=ffnord&theme=light&width=530&height=332&from=now-3d",
       "caption": "Verbundene Clients in den letzten 3 Tagen"
     }
   ],
   "siteNames": [
-    { "site": "ffhh", "name": "Hamburg" }
+    { "site": "ffnord", "name": "Freifunk Nord" }
   ]
 }
