--- a/meshviewer/config.json
+++ b/meshviewer/config.json
@@ -3,8 +3,8 @@
   "siteName": "Freifunk Nord",
   "mapSigmaScale": 1,
   "showContact": false,
-  "maxAge": 2,
-  "blinkingHours": 2,
+  "maxAge": 1,
+  "blinkingHours": 0,
   "mapLayers": [
     {
       "name": "OpenStreetMap",
@@ -16,21 +16,14 @@
         "attribution": "&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap-Mitwirkende</a>"
       }
     },
-    { "name": "MapQuest (OSM)",
+    {
+      "name": "MapQuest (OSM)",
       "url": "https://otile{s}-s.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.jpg",
       "config": {
         "subdomains": "1234",
         "type": "osm",
         "attribution": "Tiles &copy; <a href=\"https://www.mapquest.com/\" target=\"_blank\">MapQuest</a>, Data CC-BY-SA OpenStreetMap",
         "maxZoom": 18
-     }
-    },
-    {
-     "name": "OpenStreetMap (DE) http only",
-      "url": "http://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png",
-      "config": {
-      "attribution": "Tiles &copy; <a href=\"http://www.openstreetmap.org/copyright/\">OpenStreetMap</a>, OpenStreetMap DE",
-      "maxZoom": 18
      }
     },
     {
@@ -57,7 +50,26 @@
       "subdomains": "abcd",
       "attribution": "Map tiles by <a href=\"http://stamen.com/\">Stamen Design</a>, <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0</a> &mdash; Map data &copy; <a href=\"http://www.openstreetmap.org/copyright/\">OpenStreetMap</a>",
       "maxZoom": 18
-     }
+      }
+     },
+     {
+      "name": "HERE",
+      "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=%EIGENER API KEY%&app_code=%EIGENER API CODE%=deu",
+      "config": {
+        "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
+        "subdomains": "1234",
+        "maxZoom": 20
+      }
+    },
+     {
+      "name": "HERE.hybridDay",
+      "url": "https://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/{variant}/{z}/{x}/{y}/256/png8?app_id=%EIGENER API KEY%&app_code=%EIGENER API CODE%=deu",
+      "config": {
+        "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
+        "subdomains": "1234",
+        "variant": "hybrid.day",
+        "maxZoom": 20
+      }
     },
     {
      "name": "MtbMap (Profil) http only",
@@ -82,6 +94,11 @@
       "caption": "Verbundene Clients in den letzten 3 Tagen"
     }
   ],
+"fixedCenter": {
+    "lat": 54.110943,
+    "lng": 9.805298,
+    "radius": 45
+  },
   "siteNames": [
     { "site": "ffnord", "name": "Freifunk Nord" }
   ]
