--- a/meshviewer/config.json
+++ b/meshviewer/config.json
@@ -7,7 +7,30 @@
   "blinkingHours": 0,
   "mapLayers": [
     {
-      "name": "OpenStreetMap",
+      "name": "HERE",
+      "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id={app_id}&app_code={app_code}&lg=deu",
+      "config": {
+        "attribution": "Map &copy; 1987-2016 <a href=\"http://developer.here.com\">HERE</a>",
+        "subdomains": "1234",
+        "maxZoom": 19,
+        "app_id": "$$$$$$$",
+        "app_code": "$$$$$$$"
+      }
+    },
+    {
+      "name": "HERE.hybridDay",
+      "url": "https://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/{variant}/{z}/{x}/{y}/256/png8?app_id={app_id}&app_code={app_code}&lg=deu",
+      "config": {
+        "attribution": "Map &copy; 1987-2016 <a href=\"http://developer.here.com\">HERE</a>",
+        "subdomains": "1234",
+        "variant": "hybrid.day",
+        "maxZoom": 19,
+        "app_id": "$$$$$$$",
+        "app_code": "$$$$$$$"
+      }
+    },
+    {
+      "name": "OpenStreetMap (Freifunk Aachen)",
       "url": "https:///tiles{s}.aachen.freifunk.net/{z}/{x}/{y}.png",
       "config": {
         "maxZoom": 19,
@@ -16,15 +39,14 @@
         "attribution": "&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap-Mitwirkende</a>"
       }
     },
-    {
-      "name": "MapQuest (OSM)",
-      "url": "https://otile{s}-s.mqcdn.com/tiles/1.0.0/osm/{z}/{x}/{y}.jpg",
+    { "name": "ÖPNV Map (nur http)",
+      "url": "http://tileserver.memomaps.de/tilegen/{z}/{x}/{y}.png",
       "config": {
         "subdomains": "1234",
         "type": "osm",
-        "attribution": "Tiles &copy; <a href=\"https://www.mapquest.com/\" target=\"_blank\">MapQuest</a>, Data CC-BY-SA OpenStreetMap",
+        "attribution": "Tiles &copy; Memomaps.de, Data CC-BY-SA OpenStreetMap",
         "maxZoom": 18
-     }
+      }
     },
     {
      "name": "Esri World Imagery",
