--- a/meshviewer/config.json
+++ b/meshviewer/config.json
@@ -6,17 +6,7 @@
   "maxAge": 1,
   "blinkingHours": 0,
   "mapLayers": [
-    {
-      "name": "OpenStreetMap (Freifunk Aachen)",
-      "url": "https:///tiles{s}.aachen.freifunk.net/{z}/{x}/{y}.png",
-      "config": {
-        "maxZoom": 19,
-        "subdomains": "1234",
-        "type": "osm",
-        "attribution": "&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap-Mitwirkende</a>"
-      }
-    },
-    {
+     {
       "name": "HERE",
       "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id={app_id}&app_code={app_code}&lg=deu",
       "config": {
@@ -34,9 +24,19 @@
         "attribution": "Map &copy; 1987-2016 <a href=\"http://developer.here.com\">HERE</a>",
         "subdomains": "1234",
         "variant": "hybrid.day",
-        "maxZoom": 19,
+        "maxZoom": 20,
         "app_id": "$$$$$$$",
         "app_code": "$$$$$$$"
+      }
+    },
+    {
+      "name": "OpenStreetMap (Freifunk Aachen)",
+      "url": "https:///tiles{s}.aachen.freifunk.net/{z}/{x}/{y}.png",
+      "config": {
+        "maxZoom": 19,
+        "subdomains": "1234",
+        "type": "osm",
+        "attribution": "&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap-Mitwirkende</a>"
       }
     },
     { "name": "ÖPNV Map (nur http)",
@@ -83,16 +83,6 @@
         "maxZoom": 20
       }
     },
-     {
-      "name": "HERE.hybridDay",
-      "url": "https://{s}.aerial.maps.api.here.com/maptile/2.1/maptile/newest/{variant}/{z}/{x}/{y}/256/png8?app_id=%EIGENER API KEY%&app_code=%EIGENER API CODE%=deu",
-      "config": {
-        "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
-        "subdomains": "1234",
-        "variant": "hybrid.day",
-        "maxZoom": 20
-      }
-    },
     {
      "name": "MtbMap (Profil) http only",
       "url": "http://tile.mtbmap.cz/mtbmap_tiles/{z}/{x}/{y}.png",
@@ -112,7 +102,7 @@
   "globalInfos": [
     { "name": "Clientstatistik (gesamt)",
       "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-ubersicht?var-region=ffnord",
-      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=1&fullscreen&var-region=ffnord&theme=light&width=530&height=332&from=now-3d",
+      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=1&var-region=ffnord&theme=light&width=530&height=332&from=now-3d",
       "caption": "Verbundene Clients in den letzten 3 Tagen"
     }
   ],
