--- a/meshviewer/config.json
+++ b/meshviewer/config.json
@@ -1,11 +1,36 @@
 {
-  "dataPath": "data/",
+  "dataPath": [
+	"data-nodes2/",
+	"ploh/"
+],
   "siteName": "Freifunk Nord",
   "mapSigmaScale": 1,
-  "showContact": false,
+  "showContact": false,  
   "maxAge": 1,
-  "blinkingHours": 0,
   "mapLayers": [
+    { "name": "Openstreetmap.de",
+      "url": "https://a.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png",
+      "config": {
+        "maxZoom": 18,
+        "attribution": "&copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>, &copy; | <a href=\"https://carto.com/attribution\">CARTO</a>"
+      }
+    },
+    { "name": "CartoDB",
+      "url": "https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png",
+      "config": {
+        "maxZoom": 18,
+        "attribution": "&copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>, &copy; | <a href=\"https://carto.com/attribution\">CARTO</a>"
+      }
+    },
+    { "name": "OEPNV Map (nur http)",
+      "url": "http://tileserver.memomaps.de/tilegen/{z}/{x}/{y}.png",
+      "config": {
+        "subdomains": "1234",
+        "type": "osm",
+        "attribution": "Tiles &copy; Memomaps.de, Data CC-BY-SA OpenStreetMap",
+        "maxZoom": 18
+      }
+    },
      {
       "name": "HERE",
       "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id={app_id}&app_code={app_code}&lg=deu",
@@ -13,8 +38,8 @@
         "attribution": "Map &copy; 1987-2016 <a href=\"http://developer.here.com\">HERE</a>",
         "subdomains": "1234",
         "maxZoom": 19,
-        "app_id": "$$$$$$$",
-        "app_code": "$$$$$$$"
+        "app_id": "PkumKfd8u73cXTzy8A29",
+        "app_code": "gbrEeaTlYKhoo5HZiHlLYw"
       }
     },
     {
@@ -25,93 +50,44 @@
         "subdomains": "1234",
         "variant": "hybrid.day",
         "maxZoom": 20,
-        "app_id": "$$$$$$$",
-        "app_code": "$$$$$$$"
+        "app_id": "PkumKfd8u73cXTzy8A29",
+        "app_code": "gbrEeaTlYKhoo5HZiHlLYw"
       }
     },
     {
-      "name": "OpenStreetMap (Freifunk Aachen)",
-      "url": "https:///tiles{s}.aachen.freifunk.net/{z}/{x}/{y}.png",
-      "config": {
-        "maxZoom": 19,
-        "subdomains": "1234",
-        "type": "osm",
-        "attribution": "&copy; <a href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\">OpenStreetMap-Mitwirkende</a>"
-      }
-    },
-    { "name": "ÖPNV Map (nur http)",
-      "url": "http://tileserver.memomaps.de/tilegen/{z}/{x}/{y}.png",
-      "config": {
-        "subdomains": "1234",
-        "type": "osm",
-        "attribution": "Tiles &copy; Memomaps.de, Data CC-BY-SA OpenStreetMap",
-        "maxZoom": 18
-      }
+      "name": "OpenStreetMap.HOT"
     },
     {
-     "name": "Esri World Imagery",
-      "url": "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-      "config": {
-      "attribution": "Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community",
-      "maxZoom": 18
-     }
-    },
-    {
-     "name": "CartoDB (DarkMatter) http only",
-      "url": "http://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png",
-      "config": {
-      "subdomains": "abcd",
-      "attribution": "Tiles &copy; <a href=\"http://www.openstreetmap.org/copyright/\">OpenStreetMap</a> &copy; <a href=\"http://cartodb.com/attributions/\">CartoDB</a>",
-      "maxZoom": 18
-     }
-    },
-    {
-     "name": "Stamen (TonerLite)",
-      "url": "https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}.png",
-      "config": {
-      "subdomains": "abcd",
-      "attribution": "Map tiles by <a href=\"http://stamen.com/\">Stamen Design</a>, <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0</a> &mdash; Map data &copy; <a href=\"http://www.openstreetmap.org/copyright/\">OpenStreetMap</a>",
-      "maxZoom": 18
-      }
-     },
-     {
-      "name": "HERE",
-      "url": "https://{s}.base.maps.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8?app_id=%EIGENER API KEY%&app_code=%EIGENER API CODE%=deu",
-      "config": {
-        "attribution": "Map &copy; 1987-2014 <a href=\"http://developer.here.com\">HERE</a>",
-        "subdomains": "1234",
-        "maxZoom": 20
-      }
-    },
-    {
-     "name": "MtbMap (Profil) http only",
-      "url": "http://tile.mtbmap.cz/mtbmap_tiles/{z}/{x}/{y}.png",
-      "config": {
-      "attribution": "&copy; <a href=\"http://www.openstreetmap.org/copyright/\">OpenStreetMap</a> &amp; USGS",
-      "maxZoom": 18
-     }
+     "name": "Esri.WorldImagery"
     }
   ],
-  "nodeInfos": [
-    { "name": "Clientstatistik",
-      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-knoteninfo-knoten-id?var-region=ffnord&var-knoten={NODE_ID}",
-      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-knoteninfo-knoten-id?panelId=1&var-region=ffnord&var-knoten={NODE_ID}&theme=light&width=530&height=332&from=now-3d",
-      "caption": "Verbundene Clients in den letzten 3 Tage an Knoten {NODE_ID}"
-    }
+   "nodeInfos": [
+     { "name": "Clientstatistik",
+       "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-knoteninfo-knoten-id?var-region=ffnord&var-knoten={NODE_ID}",
+       "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-knoteninfo-knoten-id?panelId=1&var-region=ffnord&var-knoten={NODE_ID}&theme=light&width=530&height=332&from=now-3d",
+       "caption": "Knoten {NODE_ID}"
+     }
   ],
-  "globalInfos": [
-    { "name": "Clientstatistik (gesamt)",
-      "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-ubersicht?var-region=ffnord",
-      "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=1&var-region=ffnord&theme=light&width=530&height=332&from=now-3d",
-      "caption": "Verbundene Clients in den letzten 3 Tagen"
-    }
+   "globalInfos": [
+     { "href": "https://statistik.hamburg.freifunk.net/dashboard/db/freifunk-ubersicht?var-region=ffnord",
+       "thumbnail": "https://statistik.hamburg.freifunk.net/render/dashboard-solo/db/freifunk-ubersicht?panelId=1&var-region=ffnord&theme=light&width=530&height=332&from=now-3d"
+     }
   ],
-"fixedCenter": {
-    "lat": 54.110943,
-    "lng": 9.805298,
-    "radius": 45
-  },
   "siteNames": [
-    { "site": "ffnord", "name": "Freifunk Nord" }
+    { "site": "ffnord", "name": "Nord - Hauptdomäne" },
+    { "site": "ffnord-ploh", "name": "Nord - Plön Ostholstein" },
+    { "site": "ffnord-ahb", "name": "Nord - Amt Hüttener Berge" },
+    { "site": "ffnh", "name": "Nordheide" }
+  ],
+  "fixedCenter": {
+      "lat": 54.110943,
+      "lng": 9.805298,
+      "radius": 45
+    },
+  "hwImg": [
+    { "thumbnail": "routerpics/{MODELHASH}.svg",
+      "caption": "Knoten {MODELHASH}"
+    }
   ]
 }
+
